--- a/helpDoc.html
+++ b/helpDoc.html
@@ -59,13 +59,9 @@
 <body>
     <div class="mainBody">
         <h1>Help and Assistance is Available!</h1>
-        <p>For assistance, please email us at <a href="mailto:us514@alphagraphics.com">us514@alphagraphics.com</a>.<br>You can also call us at <span class="phone">412-261-1300</span>.</p>
-        <button class="btnBack" onclick="goBack()">Go back to the Storefront</button>
-    <script>
-        function goBack() {
-            window.history.back();
-        }
-    </script>
+        <p>For assistance, please email us at <a href="mailto:us514@alphagraphics.com">us514@alphagraphics.com</a>.<br>You can also call us at <a href="tel:412-261-1300">412-261-1300</a>.</p>
+        <br>
+        <p>To return to the Storefront, please close this window.</p>
     </div>
 </body>
 </html>
